package app.model;

public enum GameState {
    WAITING,
    PLAYING,
    ENDED
}
