package app.model;

public enum Goal
{
    HAT,
    KEY,
    RING,
    CHANDELIER,
    MAP,
    CROWN,
    SWORD,
    BOOK,
    WAND,
    SHIELD,
    POTION,
    CHEST,
    GHOST,
    DRAGON,
    BAT,
    SPIDER,
    GNOME,
    FAIRY,
    SKELETON,
    GRIFFIN,
    GOBLIN,
    MINOTAUR,
    UNICORN,
    PHOENIX,
    TROLL
}