@startuml

package app {
    package model {
        interface BoardObserver {
            + updateBoard(tiles: Tile[*], players: <Player, Vector2D>)
            + updatePlayers(players: <Player, Vector2D>)
            + updateCurrentPlayer(player: Player)
            + updateTile(tile: Tile)
            + updatePossibleDirections(possibleDirections: Direction[*])
            + updateGameStatus(status: GameState)
            + updateGameStatus(status: GameState, winner: Player)
        }

        class Game
        {
            + <<create>> Game()
            + initGame()
            + changeByDirection(dir: Direction, numRowCol: Integer, newTile: Tile): Tile
            + getAloneTile(): Tile
            + setAloneTile(tile: Tile)

            + addObserver(observer: BoardObserver)
            + removeObserver(observer: BoardObserver)
            + removeObserver(index: Integer)
            + notifyObserversCurrentPlayer()
            + notifyObserversBoard()
            + notifyObserversPlayer()
            + notifyObserversTile()
            + notifyPossibleDirections()
            + notifyGameStatus()

            + rotateAloneTile()
            + changePossibleDirection()
            + movePlayer(direction: Direction)
            + isCurrentPlayerFindItsGoal()
            + ifCurrentPlayerWin(): Boolean
            + getTileCurrentPlayer(): Tile
            + isMovable(numRowCol: Integer): Boolean
            + nextTurn()
            + endTurn()
        }
        Game"*" o--> "*\n- _observers" BoardObserver: > observed by
        Game"1" *--> "1\n- _players" playerManagement: > who play
        Game"1" *--> "1\n- _aloneTile" Tile: > have
        Game"1" *--> "1\n- _board" Board: > where we play
        Game"*" o--> "*\n- _possibleDirectionsOfCurrentPlayer" Direction: > where the player can go
        Game"*" o--> "1\n- _gameState" GameState: > is

        class playerManagement
        {
            - NAME : String[]
            - PLAYER_NUMBER: Integer
            - _currentPlayer: Integer
            + <<create>> playerManagement()
            + generatePlayers()
            - addPlayer(player: Player, position: Vector2D)
            + getCurrentPlayer(): Player
            + nextPlayer()
            + getPositionCurrentPlayer(): Vector2D
            + moveCurrentPlayer(direction: Direction)
            + getPlayer(): <Player, Vector2D>
            + getCurrentGoalCurrentPlayer(): Goal
            + nextGoalCurrentPlayer()
            + ifCurrentPlayerRestGoal(): Boolean
            + ifCurrentPlayerHasComeBack(): Boolean
        }
        Player "1" o-* "1" Vector2D: > be located
        (Player, Vector2D) .. playerManagement: *\n- _playersPositions

        playerManagement"1" *--> "*\n- _players"Player: > handle


        class Board{
            - SIZE: Integer
            + <<create>> Board()
            + initBoard()
            - generateTiles()
            - createBoard(setTiles Tile[*])

            + changeByNorth(numCol: Integer, newTile Tile): Tile
            + changeBySouth(numCol: Integer, newTile Tile): Tile
            + changeByEast(numRow: Integer, newTile Tile): Tile
            + changeByWest(numRow: Integer, newTile Tile): Tile

            + isMovable(numRowCol: Integer): Boolean
            + getTileAtPosition(x: Integer, y: Integer): Tile
            + getBoard(): Tile[*]
            + getSize(): Integer
        }
        Board "1" *--> "*\n- _board" Tile: > is composed of

        class Player{
            - _goalSuccessful: Integer
            - _goalMax: Integer
            - _name: String
            + <<create>> Player(goals: Goal[*], name: String)
            + getGoalSuccessful(): Integer
            + getGoalMaxNumber(): Integer
            + isRestGoal(): Boolean
            + nextGoal()
            + getCurrentGoal():Goal
            + getName(): String
            + toString(): String
        }
        Player"*" o-->"*\n- _goalStack" Goal: > stack of

        class Tile{
            - _pathImg: String
            + <<create>> Tile(form: Direction[*], path: String)
            + rotate()
            + existGoal(): Boolean
            + getDirection(): Direction[*]
            + setGoal(goal: Goal)
            + getGoal(): Goal
            + getPathImg():String
            + toString(): String
        }
        Tile"*" o-->"1\n- _goal" Goal: > have
        Tile"*" o-->"*\n- _possibleDirections" Direction: > can move at

        class Vector2D
        {
            - _x: Integer
            - _y: Integer
            + <<create>> Vector2D()
            + moveLeft()
            + moveRight()
            + moveTop()
            + moveBottom()

            + setX(val: Integer)
            + setY(val: Integer)
            + getX(): Integer
            + getY(): Integer
        }

        class TileFactory{
            - PATH: String
            + <<create>> TileFactory()
            + createT(): Tile
            + createI(): Tile
            + createL(): Tile
        }

        enum GameState {
            WAITING,
            PLAYING,
            ENDED
        }

        enum Goal{
            HAT,
            KEY,
            RING,
            CHANDELIER,
            MAP,
            CROWN,
            SWORD,
            BOOK,
            WAND,
            SHIELD,
            POTION,
            CHEST,
            GHOST,
            DRAGON,
            BAT,
            SPIDER,
            GNOME,
            FAIRY,
            SKELETON,
            GRIFFIN,
            GOBLIN,
            MINOTAUR,
            UNICORN,
            PHOENIX,
            TROLL
        }
        enum Direction{
            NORTH,
            EAST,
            SOUTH,
            WEST
            + {static} next (current: Direction): Direction
        }
    }
    package controller 
    {
        class GameController
        {
            - _testIfTilePushed: Boolean

            + <<create>> GameController(game: Game)
            + initGame()
            + rotateLeft()
            + rotateRight()
            + pushTileOnBoard(dir: Direction, numRowCol: Integer)
            + movePlayer(direction: Direction)
            + endTurn()
            + isMovable:Boolean
        }
        GameController "1" o--> "1\n - _game" Game: > control
    }

    package view 
    {
        class LabyrinthDisplay implements app.model.BoardObserver
        {
            - WIDTH: Integer
            - HEIGHT: Integer

            + <<create>> LabyrinthDisplay(controller: GameController)
            - initializeTopPanel()
            - initializeMiddlePanel()
            - initializeBottomPanel()
            - layoutMainPanel()
            - showStartupDialog()

            + drawPlayerOnImage(image: BufferedImage, player: Player): BufferedImage
            + getTileImage(tile: Tile): BufferedImage

            + updateBoard(tiles: Tile[*], players: <Player, Vector2D>);
            + updatePlayers(players: <Player, Vector2D>);
            + updateCurrentPlayer(player: Player);
            + updateTile(tile: Tile);
            + updatePossibleDirections(possibleDirections: Direction[*]);
            + updateGameStatus(status: GameState)
            + updateGameStatus(status: GameState, winner: Player)
        }
    }

    LabyrinthDisplay "1" o--> "1\n- _currentTile" Tile: > current alone tile
    LabyrinthDisplay "1" o--> "1\n- _controller" GameController: > call

    package helpers{
        class ImageHelper
        {
            + {static} merge(bg: BufferedImage, fg: BufferedImage): BufferedImage
            + {static} rotate(original: BufferedImage, angle: Float): BufferedImage
            + {static} rotateClockwise(original: BufferedImage): BufferedImage
            + {static} rotateCounterClockwise(original: BufferedImage): BufferedImage
        }
    }
}

class App {
    + {static} main(args: String[*])
}

App ..> Game: <<create>>
App ..> GameController: <<create>>
App ..> LabyrinthDisplay: <<create>>

TileFactory <.. Game: <<uses>>
TileFactory <.. Board: <<uses>>
TileFactory ..> Tile: <<create>>

Board ..> Goal: <<uses>>
Board ..> Tile: <<uses>>

playerManagement ..> Goal: <<uses>>
playerManagement ..> Player: <<uses>>
playerManagement ..> Vector2D: <<uses>>

Game ..> GameState: <<uses>>
Game ..> Board: <<create>>
Game ..> playerManagement: <<create>>
Game ..> Vector2D: <<uses>>
Game ..> BoardObserver: <<uses>>
Game ..> Direction: <<uses>>
Game ..> Tile: <<uses>>

LabyrinthDisplay ..> helpers: <<uses>>

@enduml